fix alignement in change detail row

--- a/exercise/src/Change.css
+++ b/exercise/src/Change.css
@@ -1,7 +1,6 @@
 .change-btn {
     cursor: default !important;
     margin-bottom: 5px;
-    margin-right: 5px;
     padding: 2px 4px 2px 4px !important;
 }
 
